Frequency domain convolution added to Convolve
Using the GSL FFT functions, the frequency domain convolution is now
complete. It is done really fast thanks to POSIX Threads.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-14  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* src/convolve/convolve.c: Added frequency domain convolution.
+
 2015-03-12  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/mkprof/ui.c (setparams): Added condition for no output given.
