Corrected flip bug in Convolve, gnuastro to Gnuastro
There was a bug in the kernel flipping part of Convolve: It should
only occur in the spatial domain and also there was a -1 missing in
the flip loop. They are both fixed.

After some discussions, we recognized that Gnuastro is better than
gnuastro in text. So all occurances fo `gnuastro' were changed to
`Gnuastro' in the manual.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-03-16  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* src/convolve/ui.c (preparearrays): The flip parts was missing a
+	-1.
+
+	* doc/gnuastro.texi: Changed all `gnuastro' occurrences in the
+	text to `Gnuastro'.
+
 2015-03-14  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/convolve/convolve.c: Added frequency domain convolution.
