libjpeg is now optional
Until now, if a user didn't have libjpeg, the configure script would
stop and there was no way forward. But since it is only used by one
part of one program (ConvertType), it was much more reasonable to have
as an optional requirement rather than a mandatory one. So in this
commit, all the places where libjpeg was needed is put within a macro
that is defined in config.h and set at configure time.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-03-17  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* tests/convertt/: If libjpeg is not present, the tests will be
+	skipped.
+
+	* src/convertt/: libjpeg is now optional.
+
+	* configure.ac: Changed libjpeg to an optional requirement. So if
+	it is not available, Gnuastro can still be built.
+
 2015-03-16  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/convolve/ui.c (preparearrays): The flip parts was missing a
